# slambench3

./: .gitignore  CMakeLists.txt  Makefile  README.md  conf-orbslam-freiburg.toml
benchmarks/: CMakeLists.txt  benchmarks.repos
cmake_modules/: FindEigen3.cmake
datasets/: datasets.repos
framework/: CMakeLists.txt
framework/makefiles/: brisk.make  dataset-utils.makefile  download_benchmarks.py  download_datasets.py  eigen3.make  freeimage.make  opencv.make  opengv.make  pangolin.make  pcl.make  sophus.make
framework/shared/: CMakeLists.txt
framework/shared/include/: ColumnWriter.h  ParameterComponent.h  ParameterManager.h  Parameters.h  SLAMBenchConfiguration.h  SLAMBenchConfigurationLifelong.h  SLAMBenchLibraryHelper.h  SLAMBenchUI.h  SLAMBenchUI_Pangolin.h  TOMLAlgorithm.h  TOMLConverter.h  TOMLInput.h  timings.h
framework/shared/src/: ColumnWriter.cpp  ParameterManager.cpp  SLAMBenchConfiguration.cpp  SLAMBenchConfigurationLifelong.cpp  SLAMBenchUI_Pangolin.cpp
framework/tools/accuracy-tools/: CMakeLists.txt
framework/tools/dataset-tools/: BONN.cpp  CMakeLists.txt  EUROCMAV.cpp  ICL.cpp  ICLNUIM.cpp  NYURGBD.cpp  OpenLORIS.cpp  SVO.cpp  TUM.cpp  UZHFPV.cpp  dataset-generator.cpp  io-readply.cpp  scannet.cpp
framework/tools/loaders/: CMakeLists.txt  benchmark_loader.cpp  lifelong_loader.cpp  pangolin_loader.cpp  (+1 more)
icra2021_results/: all_runs.json  run_paper.py
icra2021_results/plotting/: plotutils.py  slamlog.py  utils.py  violins.py
scripts/: fill_depth_colorization.m  get_nyurgbd.sh  nyu_process.m
sfusiondocker/: Dockerfile  README.md
(+114 files in other folders)
